Se configuró el controlador de signIn y se modificó swagger.yaml
